[package]
name = "cloak"
version = "0.2.0"
authors = ["Evans Murithi <murithievans80@gmail.com>"]
exclude = ["assets/*"]
repository = "https://github.com/evansmurithi/cloak"
homepage = "https://github.com/evansmurithi/cloak"
readme = "README.md"
keywords = ["otp", "cli", "authentication"]
categories = ["command-line-utilities", "authentication"]
license = "MIT"
description = "A Command Line OTP (One Time Password) Authenticator application."

[dependencies]
clap = "2.33.3"
ring = "0.16.20"
data-encoding = "2.3.2"
toml = "0.5.8"
serde = "1.0.125"
serde_derive = "1.0.119"
open = "1.7.0"
dirs-next = "2.0.0"
thiserror = "1.0.26"
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "1.0"
assert_fs = "1.0"
escargot = "0.5"
predicates = "1.0.8"

[[bin]]
path = "src/main.rs"
name = "cloak"
