[package]
name = "cloak"
version = "0.3.0"
authors = ["Evans Murithi <murithievans80@gmail.com>"]
exclude = ["assets/*"]
repository = "https://github.com/evansmurithi/cloak"
homepage = "https://github.com/evansmurithi/cloak"
readme = "README.md"
keywords = ["otp", "cli", "authentication"]
categories = ["command-line-utilities", "authentication"]
license = "MIT"
description = "A Command Line OTP (One Time Password) Authenticator application."
edition = "2018"

[dependencies]
clap = { version = "3.2.20", features = ["cargo", "wrap_help"] }
ring = "0.16.20"
data-encoding = "2.3.2"
toml = "0.6.0"
serde = "1.0.144"
serde_derive = "1.0.119"
dirs-next = "2.0.0"
thiserror = "1.0.34"
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
escargot = "0.5"
predicates = "2.1.1"

[[bin]]
path = "src/main.rs"
name = "cloak"
